Show model author name on model info statistics page